<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="top"
            android:padding="16dp">

            <TextView
                android:textAlignment="textStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="1.0"
                android:layout_margin="5dp"
                android:paddingBottom="20dp"
                android:text="@string/setup_info"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:alpha="0.5"
                android:text="@string/frequency_title"/>

            <TextView
                android:id="@+id/slider_label"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="Daily"
                android:textColor="?colorPrimary"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="-3dp"/>

            <com.google.android.material.slider.Slider
                android:id="@+id/slider_frequency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"/>

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/switch_exact"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/exact_title"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="-50dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/exact_subtitle"
                android:alpha="0.5"
                android:layout_marginLeft="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:paddingTop="30dp"
                android:alpha="0.5"
                android:text="@string/api_key_title"/>

            <TextView
                android:id="@+id/api_key_info"
                android:textAlignment="textStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="1.0"
                android:layout_margin="5dp"
                android:text="@string/api_key_info"/>

            <TextView
                android:id="@+id/api_key_sub_info"
                android:textAlignment="textStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.5"
                android:layout_margin="5dp"
                android:linksClickable="true"
                android:text="@string/api_key_sub_info"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/api_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:checked="false"/>

                <EditText
                    android:id="@+id/edittext_api_key"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/openai_hint"
                    android:inputType="textPassword"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>